# catcoding

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROGRESS.md  README.md  README_zh-CN.md
.github/workflows/: ci.yml
agents/: requirements.txt  run_agent.py
agents/backend/: agent.py
agents/base/: __init__.py  agent.py  comm.py  llm.py  scaffold.py
agents/core_dev/: agent.py
agents/deploy/: agent.py
agents/frontend/: agent.py
agents/pm/: agent.py
agents/reviewer/: agent.py
agents/tech_scout/: agent.py
agents/tester/: agent.py
cli/: Cargo.toml
cli/src/: main.rs
config/: agent.yaml.example  default.yaml  nats-server.conf
daemon/: Cargo.toml
daemon/src/: cascade.rs  db.rs  i18n.rs  ipc.rs  log_buffer.rs  main.rs  permission.rs  recovery.rs  rollback.rs  router.rs  scheduler.rs  state.rs  watchdog.rs  xp.rs
daemon/src/adapter/: claude.rs  codex.rs  hermes.rs  mod.rs
daemon/src/api/: mod.rs
daemon/src/memory/: crystallizer.rs  l1_index.rs  l2_facts.rs  l3_skills.rs  l4_sessions.rs  mod.rs  progressive_loader.rs
daemon/src/skin/: cats.rs  mod.rs
dashboard/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  i18n.ts  index.css  main.ts  style.css  theme.css
dashboard/src/api/: catBreed.ts  types.ts
dashboard/src/components/: BugTracker.vue  CatAvatar.vue  CatAvatarSVG.vue  CatSprite.vue  (+6 more)
docs/: OFFICE_SKETCH_SPEC.md  UI_UX_SPEC.md  community-outreach.md  demo-guide.md  optimization-analysis.md
docs/guide/: configuration.md  getting-started-zh.md  getting-started.md
formula/: catcoding.rb
scripts/: install.sh
shared/: protocol.json
tests/python/: test_agent_sdk.py
tests/rust/: README.md
website/: astro.config.mjs  package-lock.json  package.json
(+18 files in other folders)
