[workspace]
members = ["daemon", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/catcoding-dev/catcoding"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-nats = "0.39"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
md5 = "0.7"
