[package]
name = "catcoding-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "catcoding"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which = "6"
