[package]
name = "catcoding"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "catcoding-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-nats.workspace = true
rusqlite.workspace = true
futures-util.workspace = true
async-trait = "0.1"
libc = "0.2"
